# 26_codex_learningsystem

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.codex-plugin/: plugin.json
cert_study/: __init__.py  cli.py  db.py  engine.py  gold.py  importer.py  mcp_server.py  notion_sync.py  obsidian.py  paths.py  quality.py  reporting.py  seed_adsp.py  seed_info_processing.py  seed_public.py  seed_sqld.py
cert_study/enrichers/: source_gold.py  sqld_gold.py
cert_study/importers/: __init__.py  chathuranga_saa.py  gcp_gail.py  info_processing.py  kdata_text.py
config/: notion_sync.example.json
docs/: architecture.md  exam-expansion-plan.md  notion-schema.md  obsidian-vault.md
examples/: private_bank.example.json
scripts/: sync_notion.py
skills/cert-study/: SKILL.md
tests/: test_study_system.py
